# hass_kat_bulgaria

./: .gitignore  README.md  hacs.json  info.md  pyproject.toml  requirements-test.txt  requirements.txt  sonar-project.properties
.devcontainer/: devcontainer.json  install-dependencies.sh
.github/: FUNDING.yaml
.github/workflows/: build-and-test.yml  hacs-action.yml  hassfest.yml  publish.yml  sonar.yml
custom_components/kat_bulgaria/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  kat_client.py  manifest.json  sensor.py  strings.json
custom_components/kat_bulgaria/translations/: bg.json  en.json
images/psd/: readme-images.psd
images/src/: readme-images.psd
tests/: __init__.py  conftest.py  const.py  test_config_flow.py  test_coordinator.py  test_entity.py  test_init.py  test_migration.py  test_reconfigure_flow.py
tests/fixtures/: err_apidown.json  err_nodatafound.json  ok_fine_not_served.json  ok_fine_sample.json  ok_fine_served.json  ok_no_fines.json  ok_sample1_2fines.json  ok_sample2_6fines.json  ok_sample3_2fines.json  ok_sample4_1fine.json
